--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/yeganeh-alimohammadi-37000680/"
+  linkedin         : "yeganeh-alimohammadi-37000680/"
   orcid            :
   pinterest        :
   soundcloud       :
