--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yeganeh Alimohammadi"
   avatar           : "profile.png"
-  bio              : "3rd year PhD student in Operations Research at MS&E"
+  bio              : "PhD student in Operations Research at MS&E"
   location         : "Stanford University"
   employer         :
   pubmed           : 
