--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,4 +12,4 @@ main:
 #     url: /year-archive/
     
   - title: "CV"
-    url: /Curriculum_Vitae_for_Yeganeh.pdf
+    url: "https://yalimohammadi.github.io/files/arxivSpatialMarkets.pdf"
