--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 # main links links
 main:
- # - title: "Research"
- #   url: /publications/
+ - title: "Research"
+   url: /research/
 
-#   - title: "Talks"
-#     url: /talks/    
+  - title: "Talks"
+    url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
