--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio: |
     PhD candidate in Operations Research
-    Department of Management Science and Engineering
+    Management Science and Engineering
     Stanford University
   location         : "Stanford University"
   employer         :
