--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,8 @@ author:
   bio: |
     PhD candidate in Operations Research
     Management Science and Engineering
-  location         : "Stanford University"
+    Stanford University
+  location         : "Stanford"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=bhwPBRYAAAAJ&hl=en&oi=sra"
